# chessapi-node

./: .gitmodules  CMakeLists.txt  README.md  example.js  package-lock.json  package.json
js/: index.d.ts  index.js
src/: main.c
src/chessapi/: bitboard.h  chessapi.c  chessapi.h
